<resources>
    <string name="app_name">MarketPlace</string>
    <string name="titulo">Título</string>
    <string name="preco">Preço</string>
    <string name="localizacao">Descrição</string>
    <string name="salvar_anuncio">Salvar anúncio</string>
    <string name="remover">Remover</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="concluir">Concluir</string>
    <string name="endere_o">Endereço</string>
    <string name="telefone">Telefone</string>
</resources>
