<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity"
    android:background="@mipmap/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="17dp"
            android:fontFamily="@font/google_sans_bold"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:text="Crie sua" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/google_sans_bold"
            android:textColor="@android:color/white"
            android:text="Conta"
            android:textSize="30sp" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/senha_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nome_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:hint="Nome"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tel_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ende_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:hint="@string/endere_o"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/confirm_cadastro"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_custom"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/google_sans_bold"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:enabled="true"
        android:textColor="@color/colorAccent"
        android:onClick="confirmaCadastro"
        android:text="@string/concluir"
        android:foreground="?android:attr/selectableItemBackground"/>
</LinearLayout>