<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    tools:context="com.example.henrique.vendas.LoginActivity">

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:src="@mipmap/logo_marketplace" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_bold_italic"
            android:text="Market"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:text="place"
            android:textColor="#ffffff"
            android:textSize="30sp" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        app:hintTextAppearance="@style/Hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        app:hintTextAppearance="@style/Hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:buttonTint="@color/colorPrimary"
        android:checked="true"
        android:fontFamily="@font/google_sans_regular"
        android:text="Permanecer conectado"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <Button
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_custom"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/google_sans_bold"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:enabled="true"
        android:onClick="entrarClick"
        android:text="@string/entrar"
        android:textColor="@color/colorAccent"
        android:foreground="?android:attr/selectableItemBackground"/>

    <Button
        android:id="@+id/button"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:background="@drawable/button_custom"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/google_sans_bold"
        android:onClick="cadastrarClick"
        android:enabled="true"
        android:text="Cadastre-se"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:foreground="?android:attr/selectableItemBackground"/>

</LinearLayout>
